--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mongoose": "^7.0.0",
+    "nanoid": "^4.0.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
